# markov-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  markov-bot.cabal  shell.nix  stack.yaml
app/: Main.hs
nix/: mecab-base.nix  mecab-ipadic.nix  mecab-nodic.nix  mecab.nix
src/Web/: MarkovBot.hs
src/Web/MarkovBot/: MarkovChain.hs  Status.hs
