name:                markov-bot
version:             0.4.0.1
synopsis:            generateSentence >>= postToTwitter
description:         Please see README.md
homepage:            https://github.com/ryota-ka/markov-bot
license:             BSD3
license-file:        LICENSE
author:              Ryota Kameoka
maintainer:          kameoka.ryota@gmail.com
copyright:           2016 Ryota Kameoka
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.MarkovBot
                     , Web.MarkovBot.MarkovChain
                     , Web.MarkovBot.Status
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , authenticate-oauth
                     , bytestring
                     , containers
                     , http-conduit
                     , lens
                     , mecab
                     , random
                     , twitter-conduit
                     , twitter-types
                     , text
                     , time
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-name-shadowing

executable markov-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , markov-bot
                     , optparse-applicative
                     , time
                     , unix
  default-language:    Haskell2010

test-suite markov-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , markov-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ryota-ka/markov-bot
